change useAsyncData and useFetch methods

--- a/theme.css
+++ b/theme.css
@@ -682,7 +682,7 @@ h3 {
     /*padding: 0 var(--offset);*/
     padding: 0;
     background-color: white;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
     /*background: #2c3e50;*/
 }
 
