--- a/theme.css
+++ b/theme.css
@@ -57,18 +57,6 @@ a {
     text-decoration: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: 500;
-    line-height: 1.45;
-    padding: 0;
-
-}
-
 h1 {
     font-size: 2.2rem;
     font-weight: 600;
@@ -81,6 +69,19 @@ h2 {
 h3 {
     font-size: 1.35rem;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 500;
+    line-height: 1.45;
+    padding: 0;
+}
+
+
 
 .danger {
     color: #e53935;
@@ -1146,14 +1147,14 @@ fieldset {
 
 .bar {
     width: 100%;
-    height: 4px; /* висота ліній */
-    background-color: black; /* колір ліній */
-    transition: 0.3s; /* ефект переходу */
+    height: 4px;
+    background-color: black;
+    transition: 0.3s;
 
 }
 
 .toggle-button:hover .bar {
-    background-color: #666; /* зміна кольору при наведенні */
+    background-color: #666;
 }
 
 .opened {
